首页增加管理员入口

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
         <div class="login_bottom">
             <a href="#">注册/Register</a>
             <a href="#">找回密码/Reset password</a>
+            <a href="./view/admin/administrator.html">管理员/Administrator</a>
         </div>
     </div>
+
 </div>
 <!--底部区域-->
 <div class="footer"></div>
